--- a/config/database.yml
+++ b/config/database.yml
@@ -3,13 +3,23 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-development:
+dev: &dev
   <<: *default
+  host: db
+  username: postgres
+  password: password
+
+development:
+  <<: *dev
   database: songdown_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *dev
   database: songdown_test
+
+production:
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
