--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,20 @@
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-dev: &dev
-  <<: *default
-  host: db
-  username: postgres
-  password: password
+  pool: 5
+  timeout: 5000
 
 development:
-  <<: *dev
-  database: songdown_development
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *dev
-  database: songdown_test
+  <<: *default
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database: db/production.sqlite3
